--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "eslint-import-resolver-alias": "^1.1.2",
     "marx-css": "^4.0.1",
+    "mongodb": "^4.3.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
